--- a/EtherwildTransparencyTest/EtherwildTransparencyTest.csproj
+++ b/EtherwildTransparencyTest/EtherwildTransparencyTest.csproj
@@ -9,6 +9,7 @@
         <LangVersion>12</LangVersion>
         <SelfContained>false</SelfContained>
         <PublishSingleFile>false</PublishSingleFile>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -32,6 +33,32 @@
         <PackageReference Include="MonoGame.Extended.Tiled" Version="3.8.0" />
         <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.0.1641" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.runtimeconfig.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\libmojoshader_64.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.exe" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.runtimeconfig.dev.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\SharpDX.D3DCompiler.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\CppNet.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\SharpDX.D3DCompiler.xml" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\SharpDX.D3DCompiler.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.pdb" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\SharpDX.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.runtimeconfig.dev.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.runtimeconfig.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\libmojoshader_64.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\SharpDX.xml" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\SharpDX.D3DCompiler.xml" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\mgfxc.deps.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\SharpDX.xml" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.pdb" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.deps.json" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended\3.8.0\contentFiles\any\netstandard2.0\SharpDX.dll" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.exe" />
+      <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\CppNet.dll" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
