--- a/EtherwildTransparencyTest/EtherwildTransparencyTest.csproj
+++ b/EtherwildTransparencyTest/EtherwildTransparencyTest.csproj
@@ -60,6 +60,11 @@
       <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\mgfxc.exe" />
       <Content Remove="D:\Development\NugetPackages\monogame.extended.content.pipeline\3.8.0\contentFiles\any\netcoreapp3.1\CppNet.dll" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Src\Channels\" />
+      <Folder Include="Src\Components\" />
+      <Folder Include="Src\Events\" />
+    </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
         <Exec Command="dotnet tool restore"/>
